package net_webby_protostuff_runtime;

option java_package = "net.webby.protostuff.runtime";

message ArrayObject {
  optional string ID_ARRAY = 15;
  optional string ID_ARRAY_MAPPED = 17;
  optional uint32 ID_ARRAY_LEN = 3;
  optional uint32 ID_ARRAY_DIMENSION = 2;
  repeated DynamicObject ID_OBJECT = 1;
}

message DynamicObject {
  optional bool booleanValue = 1;
  optional uint32 byteValue = 2;
  optional uint32 charValue = 3;
  optional uint32 shortValue = 4;
  optional int32 intValue = 5;
  optional int64 longValue = 6;
  optional float floatValue = 7;
  optional double doubleValue = 8;
  optional string stringValue = 9;
  optional bytes bytesValue = 10;
  optional bytes byteArrayValue = 11;
  optional string bigDecimalValue = 12;
  optional bytes bigIntegerValue = 13;
  optional fixed64 dateValue = 14;
  optional ArrayObject arrayValue = 15;
}

message UUID {
  optional int64 mostSigBits = 1;
  optional int64 leastSigBits = 2;
}



